--- a/estilos.css
+++ b/estilos.css
@@ -1,1 +1,20 @@
+*{
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
+body{
+    background:#F2F2F2;
+    font-size: 16px;
+    font-family:"Roboto",Arial,sans-serif,helvetica;
+    
+}
+
+.wrap{
+    width: 90%
+    max-width: 500px;
+    margin: auto;
+}
