--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,4 @@
-*{
+* {
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
@@ -6,15 +6,25 @@
   box-sizing: border-box;
 }
 
-body{
+body {
     background:#F2F2F2;
     font-size: 16px;
     font-family:"Roboto",Arial,sans-serif,helvetica;
     
 }
 
-.wrap{
-    width: 90%;
+.wrap {
+    width: 90%
     max-width: 500px;
     margin: auto;
+}
+
+form{
+  width: 100%;
+  margin: 20px 0;
+  padding: 20px;
+  background: #fff;
+  overflow: hidden;
+  box-shadow: 0 0 3px grey;
+  border-top: 4px solid #536DFE;
 }
