--- a/estilos.css
+++ b/estilos.css
@@ -43,3 +43,18 @@ form textarea{
     font-size: 1em;
     color: #141938;
 }
+
+form input[type = "text"]:focus,
+form input[type = "email"]:focus,
+form input[type = "password"]:focus,
+form textarea:focus{
+    border: 2px solid #3F51B5;
+    padding: 15px;
+}
+
+form textarea:{
+    max-width: 100%;
+    min-width: 100%;
+    max-height: 250px;
+    min-height: 150px;
+}
